[tool.poetry]
name = "get-papers-list"  # The name of your project (can be different from script name)
version = "0.1.0"
description = "A tool to fetch PubMed papers with industry affiliations"
authors = ["V Rohit Reddy"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.2"  # lxml is needed for faster xml parsing
requests = "^2.32.3"

[tool.poetry.scripts]
get_pubmed_papers = "get_pubmed_papers:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"